# vram_compression

./: .gitignore  CMakeLists.txt  Makefile  imgui.ini
.github/workflows/: c-cpp.yml
includes/: camera.h  renderer.hpp  shader.h  vtk_loader.h
shaders/: proxy.fs  proxy.vert
src/: camera.cpp  main.cpp  renderer.cpp  shader.cpp  vtk_loader.cpp
vdb_compression/: CMakeLists.txt  build.sh
vdb_compression/src/: VDBCompressor.cpp  VDBCompressor.h  check_vdb.cpp  main.cpp
